--- a/email/package.json
+++ b/email/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "customer-app",
+  "name": "email",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "mongoose": "^5.3.15",
-    "pug": "^2.0.3"
+    "nodemailer": "^4.7.0"
   }
 }
