--- a/project-deprecated/package.json
+++ b/project-deprecated/package.json
@@ -1,17 +1,18 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "shoe store app",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "matthew showman",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.1",
-    "passport": "^0.4.0",
-    "passport-local-mongoose": "^5.0.1"
+    "mongoose": "^5.3.13",
+    "pug": "^2.0.3"
   }
 }
