--- a/project/package.json
+++ b/project/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1"
