--- a/authentication/auth-local/package.json
+++ b/authentication/auth-local/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.3.14",
+    "mongoose": "^5.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
