--- a/project/package.json
+++ b/project/package.json
@@ -9,11 +9,14 @@
   "author": "matthew showman",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "mongoose": "^5.4.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "pug": "^2.0.3"
   }
