added some authentication lines

--- a/project/package.json
+++ b/project/package.json
@@ -9,6 +9,7 @@
   "author": "matthew showman",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
